--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "author": "Biasiolo",
     "license": "MIT",
-    "homepage": "https://github.com/Biasiolo/interactive-circle-menu#readme",
+    "homepage": "https://interactive-circle-menu.vercel.app/",
     "keywords": ["interactive menu", "circle menu", "ux-ui", "circular", "menu", "HTML", "CSS", "JavaScript"]
   }
   
